--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "simple-node-logger": "^21.8.12"
   }
 }
